--- a/usuarios/templates/usuarios/login.html
+++ b/usuarios/templates/usuarios/login.html
@@ -8,5 +8,11 @@
         {{ form.as_p }}
         <button type="submit" class="btn btn-primary">Ingresar</button>
     </form>
+
+    <!-- Botón o enlace para registrarse -->
+    <p class="mt-3">
+        ¿No tienes cuenta? 
+        <a href="/usuarios/registrar/" class="btn btn-success btn-sm">Registrarse</a>
+    </p>
 </div>
 {% endblock %}
