--- a/usuarios/templates/usuarios/registrar_usuario.html
+++ b/usuarios/templates/usuarios/registrar_usuario.html
@@ -28,7 +28,7 @@
                         {% endfor %}
 
                         <div class="d-flex justify-content-between">
-                            <a href="{% url 'lista_usuarios' %}" class="btn btn-outline-secondary">Cancelar</a>
+                            <a href="{% url 'usuarios:lista_usuarios' %}" class="btn btn-outline-secondary">Cancelar</a>
                             <button type="submit" class="btn btn-success">Registrar</button>
                         </div>
                     </form>
