--- a/reservas/templates/planes/plan.html
+++ b/reservas/templates/planes/plan.html
@@ -17,7 +17,7 @@
                         Degustación de miel artesanal.
                     </p>
                     <p class="fw-bold">Precio: $50.000 por persona</p>
-                    <a href="{% url 'crear_reserva' %}" class="btn btn-dark">Reservar</a>
+                    <a href="{% url 'reservas:crear_reserva' %}" class="btn btn-dark">Reservar</a>
                 </div>
             </div>
         </div>
@@ -33,7 +33,7 @@
                         Degustación de productos derivados de la miel.
                     </p>
                     <p class="fw-bold">Precio: $120.000 por persona</p>
-                    <a href="{% url 'crear_reserva' %}" class="btn btn-dark">Reservar</a>
+                    <a href="{% url 'reservas:crear_reserva' %}" class="btn btn-dark">Reservar</a>
                 </div>
             </div>
         </div>
@@ -50,7 +50,7 @@
                         Kit de regalo con productos de la finca.
                     </p>
                     <p class="fw-bold">Precio: $250.000 por persona</p>
-                    <a href="{% url 'crear_reserva' %}"  class="btn btn-dark">Reservar</a>
+                    <a href="{% url 'reservas:crear_reserva' %}"  class="btn btn-dark">Reservar</a>
                 </div>
             </div>
         </div>
