--- a/usuarios/templates/usuarios/lista_usuarios.html
+++ b/usuarios/templates/usuarios/lista_usuarios.html
@@ -37,7 +37,7 @@
                 </tbody>
             </table>
             <div class="d-flex justify-content-end mt-3">
-                <a href="{% url 'registrar_usuario' %}" class="btn btn-outline-dark">
+                <a href="{% url 'usuarios:registrar_usuario' %}" class="btn btn-outline-dark">
                     ➕ Registrar nuevo usuario
                 </a>
             </div>
