--- a/producto/templates/producto/formulario_producto.html
+++ b/producto/templates/producto/formulario_producto.html
@@ -34,7 +34,7 @@
 
                     <!-- Botones -->
                     <div class="d-flex justify-content-between mt-4">
-                        <a href="{% url 'lista_productos' %}" class="btn btn-outline-secondary px-4 rounded-pill">
+                        <a href="{% url 'producto:lista_productos' %}" class="btn btn-outline-secondary px-4 rounded-pill">
                             Cancelar
                         </a>
                         <button type="submit" class="btn btn-success px-4 rounded-pill">
