--- a/producto/templates/producto/lista_productos.html
+++ b/producto/templates/producto/lista_productos.html
@@ -6,9 +6,11 @@
     <!-- Título y botón -->
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h1 class="fw-bold">Nuestros Productos</h1>
-        <a href="{% url 'crear_producto' %}" class="btn btn-success rounded-pill px-4">
-            ➕ Agregar producto
-        </a>
+        {% if user.is_authenticated and user.is_superuser %}
+            <a href="{% url 'producto:crear_producto' %}" class="btn btn-success rounded-pill px-4">
+                ➕ Agregar producto
+            </a>
+        {% endif %}
     </div>
 
     <!-- Grid de productos -->
@@ -27,7 +29,7 @@
                         <p class="fs-5 fw-bold text-success">${{ producto.precio }}</p>
 
                         <!-- Botón Ver detalle -->
-                        <a href="{% url 'detalle_producto' producto.id %}" class="btn btn-outline-success rounded-pill w-100 mb-2">
+                        <a href="{% url 'producto:detalle_producto' producto.id %}" class="btn btn-outline-success rounded-pill w-100 mb-2">
                             Ver detalle
                         </a>
 
