--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,14 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand fw-bold" href="#">Eterna Primavera</a>
+            <a class="navbar-brand fw-bold"
+               href="{% if user.is_authenticated and user.is_superuser %}
+                        {% url 'usuarios:admin_home' %}
+                    {% else %}
+                        {% url 'home' %}
+                    {% endif %}">
+                Eterna primavera
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -36,11 +43,11 @@
                 <ul class="navbar-nav ms-auto">
                     <!-- Productos -->
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'lista_productos' %}">Productos</a>
+                        <a class="nav-link" href="{% url 'producto:lista_productos' %}">Productos</a>
                     </li>
                       <!-- Reservas -->
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'planes' %}">Reservas</a>
+                        <a class="nav-link" href="{% url 'reservas:planes' %}">Reservas</a>
                     </li>
                     {% if user.is_authenticated %}
                         <!-- Carrito solo si está logueado -->
