--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,6 @@
 
-
+<!-- Realizado por alexandra hurtado-->
+{% extends 'base.html' %}
 {% block content %}
 <!-- Home simple con mensaje de bienvenida -->
 <div class="d-flex justify-content-center align-items-center" style="min-height: 60vh; text-align: center;">
