--- a/pedidos/templates/pedidos/lista_pedidos.html
+++ b/pedidos/templates/pedidos/lista_pedidos.html
@@ -21,12 +21,25 @@
             {% for pedido in pedidos %}
             <tr>
                 <td>{{ pedido.id }}</td>
-                <td>{{ pedido.cliente }}</td>
+                <td>{{ pedido.usuario }}</td>
                 <td>{{ pedido.fecha }}</td>
                 <td>{{ pedido.estado }}</td>
                 <td>{{ pedido.total }}</td>
                 <td>
-                    <a href="{% url 'pedidos:detalle_pedido' pedido.id %}" class="btn btn-outline-dark">Ver Detalle</a>
+                    
+                    {% if user.is_superuser %}
+                        <form method="post" action="{% url 'pedidos:cambiar_estado_pedido' pedido.id 'dummy' %}" style="display:inline;">
+                            {% csrf_token %}
+                            <select name="nuevo_estado" onchange="this.form.action=this.form.action.replace('dummy', this.value); this.form.submit();" class="form-select form-select-sm d-inline w-auto">
+                                <option disabled selected>Cambiar estado</option>
+                                <option value="Pendiente">Pendiente</option>
+                                <option value="Pagado">Pagado</option>
+                                <option value="Enviado">Enviado</option>
+                                <option value="Entregado">Entregado</option>
+                                <option value="Cancelado">Cancelado</option>
+                            </select>
+                        </form>
+                    {% endif %}
                 </td>
             </tr>
             {% empty %}
