--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,12 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'carrito:ver_carrito' %}">Carrito</a>
                             </li>
+                               <!-- Mis pedidos -->
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'pedidos:mis_pedidos' %}">Mis pedidos</a>
+                            </li>
                         {% endif %}
+                      
 
                         <!-- Cerrar sesión siempre que esté logueado -->
                         <li class="nav-item">
