--- a/pedidos/templates/pedidos/detalle_pedido.html
+++ b/pedidos/templates/pedidos/detalle_pedido.html
@@ -4,6 +4,9 @@
 {% block content %}
 <div class="container mt-4">
     <h2>Detalle del Pedido #{{ pedido.id }}</h2>
+    <p><strong>Cliente:</strong> {{ pedido.usuario.nombre }}</p>
+    <p><strong>Dirección:</strong> {{ pedido.usuario.direccion }}</p>
+
 
     <p><strong>Estado:</strong> {{ pedido.estado }}</p>
     <p><strong>Fecha:</strong> {{ pedido.fecha }}</p>
