--- a/pedidos/templates/pedidos/lista_pedidos.html
+++ b/pedidos/templates/pedidos/lista_pedidos.html
@@ -11,6 +11,7 @@
             <tr>
                 <th>ID</th>
                 <th>Cliente</th>
+                <th>Dirección</th>
                 <th>Fecha</th>
                 <th>Estado Pedido</th>
                 <th>Estado Pago</th>  <!-- 🔹 Nueva columna -->
@@ -23,6 +24,7 @@
             <tr>
                 <td>{{ pedido.id }}</td>
                 <td>{{ pedido.usuario }}</td>
+                <td>{{ pedido.usuario.direccion }}</td>
                 <td>{{ pedido.fecha }}</td>
                 <td>{{ pedido.estado }}</td>
                 <td>
