--- a/pedidos/templates/pedidos/mis_pedidos.html
+++ b/pedidos/templates/pedidos/mis_pedidos.html
@@ -8,6 +8,7 @@
             <thead>
                 <tr>
                     <th>ID Pedido</th>
+                    <th>Dirección</th>
                     <th>Fecha</th>
                     <th>Total</th> 
                     <th>Estado del Pedido</th>
@@ -19,6 +20,7 @@
                 {% for pedido in pedidos %}
                 <tr>
                     <td>{{ pedido.id }}</td>
+                    <td>{{ pedido.usuario.direccion }}</td>
                     <td>{{ pedido.fecha }}</td>
                     <td>${{ pedido.total }}</td>
                     <td>{{ pedido.estado }}</td>
