Ajuste condicionales para fechas de reserva

--- a/reservas/templates/planes/plan.html
+++ b/reservas/templates/planes/plan.html
@@ -12,11 +12,11 @@
                 <div class="card-body text-center">
                     <h4 class="card-title fw-bold">Plan Básico</h4>
                     <p class="card-text">
-                        Duración: 3 horas<br>
+                        Duración: 1 día <br>
                         Recorrido guiado por la finca y demostración de recolección de miel.<br>
                         Degustación de miel artesanal.
                     </p>
-                    <p class="fw-bold">Precio: $50.000 por persona</p>
+                    <p class="fw-bold">Precio: $70.000 por persona</p>
                     <a href="{% url 'reservas:crear_reserva' %}" class="btn btn-dark">Reservar</a>
                 </div>
             </div>
@@ -28,11 +28,11 @@
                 <div class="card-body text-center">
                     <h4 class="card-title fw-bold">Plan Premium</h4>
                     <p class="card-text">
-                        Duración: 1 día<br>
-                        Incluye recorrido completo, taller práctico de apicultura y almuerzo campestre.<br>
-                        Degustación de productos derivados de la miel.
+                        Duración: 2 días<br>
+                        Incluye recorrido completo, taller práctico de apicultura y almuerzo campestre y cena tipo picnic.<br>
+                        Hospedaje básico en habitación. Degustación de productos derivados de la miel.
                     </p>
-                    <p class="fw-bold">Precio: $120.000 por persona</p>
+                    <p class="fw-bold">Precio: $180.000 por persona</p>
                     <a href="{% url 'reservas:crear_reserva' %}" class="btn btn-dark">Reservar</a>
                 </div>
             </div>
@@ -44,12 +44,12 @@
                 <div class="card-body text-center">
                     <h4 class="card-title fw-bold">Plan VIP</h4>
                     <p class="card-text">
-                        Duración: 2 días<br>
-                        Experiencia inmersiva con hospedaje rural, acceso a colmenas privadas,
-                        taller avanzado de apicultura y cena especial.<br>
+                        Duración: 3 días<br>
+                        Experiencia inmersiva con hospedaje rural en cabañas, acceso a colmenas privadas,
+                        taller avanzado de apicultura. Incluye almuerzo, cena especial y desayuno campestre.<br>
                         Kit de regalo con productos de la finca.
                     </p>
-                    <p class="fw-bold">Precio: $250.000 por persona</p>
+                    <p class="fw-bold">Precio: $300.000 por persona</p>
                     <a href="{% url 'reservas:crear_reserva' %}"  class="btn btn-dark">Reservar</a>
                 </div>
             </div>
