Adición funcionalidad especial 1 (Descargar comprobante de pedido pdf)

--- a/pedidos/templates/pedidos/mis_pedidos.html
+++ b/pedidos/templates/pedidos/mis_pedidos.html
@@ -31,7 +31,9 @@
                                 Ir a pagar
                             </a>
                         {% else %}
-                            ---
+                            <a href="{% url 'pedidos:pedido_pdf' pedido.id %}" class="btn btn-sm btn-primary">
+                                Descargar PDF
+                            </a>
                         {% endif %}
                     </td>
                 </tr>
