--- a/reservas/templates/reservas/lista_reservas.html
+++ b/reservas/templates/reservas/lista_reservas.html
@@ -1,3 +1,4 @@
+
 <!-- Realizado por Mariana Valderrama -->
 {% extends 'base.html' %}
 
@@ -6,6 +7,29 @@
 {% block content %}
 <h2>Lista de Reservas</h2>
 
+<!-- FORMULARIO DE FILTROS -->
+<form method="get" class="mb-4">
+    <div class="row">
+        <div class="col-md-3">
+            <input type="date" name="fecha_llegada" class="form-control" 
+                   value="{{ request.GET.fecha_llegada }}" placeholder="Fecha de llegada">
+        </div>
+        
+        <div class="col-md-2">
+            <input type="number" name="personas" class="form-control" 
+                   value="{{ request.GET.personas }}" placeholder="Personas">
+        </div>
+        <div class="col-md-2">
+            <input type="text" name="plan" class="form-control" 
+                   value="{{ request.GET.plan }}" placeholder="Tipo de plan">
+        </div>
+        <div class="col-md-2">
+            <button type="submit" class="btn btn-outline-primary w-100">Filtrar</button>
+        </div>
+    </div>
+</form>
+
+<!-- TABLA DE RESERVAS -->
 <table class="table table-striped">
     <thead>
         <tr>
@@ -30,8 +54,13 @@
                 <a href="{% url 'reservas:eliminar_reserva' reserva.id %}" class="btn btn-outline-danger">Eliminar</a>
             </td>
         </tr>
+        {% empty %}
+        <tr>
+            <td colspan="6" class="text-center">No hay reservas que coincidan con los filtros.</td>
+        </tr>
         {% endfor %}
     </tbody>
 </table>
+
 <a href="{% url 'reservas:crear_reserva' %}" class="btn btn-outline-success">Crear Reserva</a>
 {% endblock %}
