--- a/pedidos/templates/pedidos/lista_pedidos.html
+++ b/pedidos/templates/pedidos/lista_pedidos.html
@@ -6,12 +6,19 @@
 <div class="container mt-5">
     <h2>Lista de Pedidos</h2>
 
+    {% if user.is_staff %}
+        <a href="{% url 'pedidos:exportar_pedidos_pagados' %}" class="btn btn-outline-success mb-3">
+            Descargar pedidos pagados en Excel
+        </a>
+    {% endif %}
+
     <table class="table table-striped">
         <thead>
             <tr>
                 <th>ID</th>
                 <th>Cliente</th>
                 <th>Dirección</th>
+                <th>Productos</th> 
                 <th>Fecha</th>
                 <th>Estado Pedido</th>
                 <th>Estado Pago</th>  <!-- 🔹 Nueva columna -->
@@ -25,6 +32,12 @@
                 <td>{{ pedido.id }}</td>
                 <td>{{ pedido.usuario }}</td>
                 <td>{{ pedido.usuario.direccion }}</td>
+                <td>
+                    {% for item in pedido.items.all %}
+                        {{ item.producto }} (x{{ item.cantidad }})<br>
+                    {% endfor %}
+                </td>
+
                 <td>{{ pedido.fecha }}</td>
                 <td>{{ pedido.estado }}</td>
                 <td>
