Creación de seed para poblacion de bd

--- a/usuarios/templates/usuarios/admin_home.html
+++ b/usuarios/templates/usuarios/admin_home.html
@@ -64,7 +64,7 @@
                     <div class="fs-1">📊</div>
                     <h5 class="card-title mt-2">Dashboard</h5>
                     <p class="card-text">Visualiza métricas y estadísticas de la plataforma.</p>
-                    <a href="{% url 'dashboard_admin' %}" class="btn btn-dark">Ir</a>
+                    <a href="{% url 'usuarios:dashboard_admin' %}" class="btn btn-dark">Ir</a>
                 </div>
             </div>
         </div>
