--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/forms.css' %}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eterna Primavera</title>
