--- a/reservas/templates/reservas/lista_reservas.html
+++ b/reservas/templates/reservas/lista_reservas.html
@@ -1,4 +1,3 @@
-
 <!-- Realizado por Mariana Valderrama -->
 {% extends 'base.html' %}
 
@@ -19,10 +18,12 @@
             <input type="number" name="personas" class="form-control" 
                    value="{{ request.GET.personas }}" placeholder="Personas">
         </div>
+
         <div class="col-md-2">
             <input type="text" name="plan" class="form-control" 
                    value="{{ request.GET.plan }}" placeholder="Tipo de plan">
         </div>
+
         <div class="col-md-2">
             <button type="submit" class="btn btn-outline-primary w-100">Filtrar</button>
         </div>
@@ -30,7 +31,7 @@
 </form>
 
 <!-- TABLA DE RESERVAS -->
-<table class="table table-striped">
+<table class="table table-striped text-center">
     <thead>
         <tr>
             <th>ID</th>
@@ -49,15 +50,16 @@
             <td>{{ reserva.fecha_salida }}</td>
             <td>{{ reserva.numero_personas }}</td>
             <td>{{ reserva.tipo_plan }}</td>
-           {% if user.is_staff %}
-                <a href="{% url 'reservas:editar_reserva' reserva.id %}" class="btn btn-primary btn-sm">
-                    Editar
-                </a>
-                <a href="{% url 'reservas:eliminar_reserva' reserva.id %}" class="btn btn-danger btn-sm">
-                    Eliminar
-                </a>
-            {% endif %}
-
+            <td>
+                {% if user.is_staff %}
+                    <a href="{% url 'reservas:editar_reserva' reserva.id %}" 
+                       class="btn btn-primary btn-sm me-2">Editar</a>
+                    <a href="{% url 'reservas:eliminar_reserva' reserva.id %}" 
+                       class="btn btn-danger btn-sm">Eliminar</a>
+                {% else %}
+                    <span class="text-muted">No disponible</span>
+                {% endif %}
+            </td>
         </tr>
         {% empty %}
         <tr>
