--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
                     </li>
                       <!-- Reservas -->
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'reservas:planes' %}">Reservas</a>
+                        <a class="nav-link" href="{% url 'reservas:lista_reservas' %}">Reservas</a>
                     </li>
                     {% if user.is_authenticated %}
                         {% if not user.is_superuser %}
